supervisor work start

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@minimal/minimal-kit-react",
-  "author": "minimals.cc",
+  "name": "gangtel",
+  "author": "gangtel",
   "version": "3.3.0",
   "description": "Javascript Version",
   "private": true,
