--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "assert": "^2.0.0",
     "autosuggest-highlight": "^3.2.1",
     "axios": "^0.26.1",
+    "bootstrap": "^5.3.1",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "change-case": "^4.1.2",
@@ -88,6 +89,7 @@
     "react-apexcharts": "^1.4.0",
     "react-app-rewired": "^2.2.1",
     "react-beautiful-dnd": "^13.1.0",
+    "react-bootstrap": "^2.8.0",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.4",
