--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "react-i18next": "^11.15.6",
     "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-map-gl": "^6.1.19",
     "react-markdown": "^8.0.0",
     "react-quill": "^2.0.0-beta.4",
