--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.20.1",
     "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
     "@fullcalendar/list": "^5.10.1",
@@ -49,8 +49,9 @@
     "@fullcalendar/timeline": "^5.10.1",
     "@hookform/resolvers": "^2.8.8",
     "@iconify/react": "^3.1.4",
+    "@mui/icons-material": "^5.14.6",
     "@mui/lab": "^5.0.0-alpha.72",
-    "@mui/material": "^5.5.0",
+    "@mui/material": "^5.14.6",
     "@mui/x-data-grid": "^5.6.1",
     "@react-pdf/renderer": "^2.1.1",
     "@reduxjs/toolkit": "^1.8.0",
